# langchain-workflow

./: .cursorrules  .env  .env.example  .gitattributes   .gitignore  README.md  main.py  pre-commit  pyproject.toml  requirements.txt  run.sh
docs/: graph.md
langchain_demo.egg-info/: PKG-INFO  SOURCES.txt
src/: api.py  main.py
src/agent/: agent.py  model.py  simple_angent.py  task_agent.py  text_speech_agent.py  translation_angent.py
src/graph/: __init__.py  generate_img.py  graph.py  state.py
src/langchain_demo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/langchain_workflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/llm/: chat_tts_llm.py  llm.py
src/prompts/: response_generation.py  task_analysis.py  tool_analysis.py
src/tools/: tools.py
tests/: test_chattts.py  test_chattts_demo.py  test_edge_tts.py  test_gtts.py  test_llm.py  test_ollama.py  test_pyttsx3.py  test_simple_angent.py  test_task_agent.py  test_translation.py
